[package]
name = "vgs"
description = "API client for the Very Good Security API."
version = "0.1.0"
authors = ["Derek Crosson <derekcrosson18@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "vgs"

[dependencies]
serde = "1.0.136"

[dev-dependencies]
reqwest = "0.11.10"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
